<resources>
    <string name="app_name">CloudApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="pdf">PDF</string>
    <string name="download">download</string>
    <string name="username">username</string>
    <string name="show_your_files">Show your files</string>
    <string name="logout">Logout</string>
    <string name="title_file">hellowordl.txt</string>
</resources>